Rebase; Major rewrite for embeds, auto ot, specific requests & integrations; Extensions tests

--- a/SysBot.Pokemon.ConsoleApp/SysBot.Pokemon.ConsoleApp.csproj
+++ b/SysBot.Pokemon.ConsoleApp/SysBot.Pokemon.ConsoleApp.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Reference Include="PKHeX.Core">
+      <HintPath>..\SysBot.Pokemon\deps\PKHeX.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SysBot.Pokemon.Discord\SysBot.Pokemon.Discord.csproj" />
     <ProjectReference Include="..\SysBot.Pokemon.Twitch\SysBot.Pokemon.Twitch.csproj" />
     <ProjectReference Include="..\SysBot.Pokemon\SysBot.Pokemon.csproj" />
