--- a/SysBot.Pokemon/SysBot.Pokemon.csproj
+++ b/SysBot.Pokemon/SysBot.Pokemon.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="PKHeX.Core" Version="25.5.18" />
     <ProjectReference Include="..\SysBot.Base\SysBot.Base.csproj" />
   </ItemGroup>
 
@@ -9,6 +8,9 @@
     <Folder Include="deps\" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="PKHeX.Core">
+      <HintPath>deps\PKHeX.Core.dll</HintPath>
+    </Reference>
     <Reference Include="PKHeX.Core.AutoMod">
       <HintPath>deps\PKHeX.Core.AutoMod.dll</HintPath>
     </Reference>
