--- a/SysBot.Pokemon.Twitch/SysBot.Pokemon.Twitch.csproj
+++ b/SysBot.Pokemon.Twitch/SysBot.Pokemon.Twitch.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="PKHeX.Core" Version="25.5.18" />
+    <Reference Include="PKHeX.Core">
+      <HintPath>..\SysBot.Pokemon\deps\PKHeX.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="TwitchLib.Client" Version="3.3.1" />
   </ItemGroup>
 
