--- a/SysBot.Pokemon.YouTube/SysBot.Pokemon.YouTube.csproj
+++ b/SysBot.Pokemon.YouTube/SysBot.Pokemon.YouTube.csproj
@@ -6,7 +6,6 @@
     <PackageReference Include="Google.Apis.Core" Version="1.69.0" />
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.69.0.3680" />
     <PackageReference Include="Google.Apis.YouTubePartner.v1" Version="1.35.1.1334" />
-    <PackageReference Include="PKHeX.Core" Version="25.5.18" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="PKHeX.Core">
+      <HintPath>..\SysBot.Pokemon\deps\PKHeX.Core.dll</HintPath>
+    </Reference>
     <Reference Include="StreamingClient.Base">
       <HintPath>deps\StreamingClient.Base.dll</HintPath>
     </Reference>
