--- a/SysBot.Pokemon.Z3/SysBot.Pokemon.Z3.csproj
+++ b/SysBot.Pokemon.Z3/SysBot.Pokemon.Z3.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="PKHeX.Core" Version="25.5.18" />
+    <Reference Include="PKHeX.Core">
+      <HintPath>..\SysBot.Pokemon\deps\PKHeX.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
